# NightmareNet

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pr_body_30.md  pr_comment_30.md  pyproject.toml  requirements.txt  setup.py
.agent/skills/ui-ux-pro-max/: SKILL.md
.agent/skills/ui-ux-pro-max/scripts/: core.py
.claude/: settings.json
.claude/commands/: commit.md  prime.md
.claude/skills/ui-ux-pro-max/: SKILL.md
.claude/skills/ui-ux-pro-max/scripts/: design_system.py  search.py
.codex/skills/ui-ux-pro-max/: SKILL.md
.github/actions/robustness-delta-comment/: compute_delta.py  format_comment.py  post_comment.py
.github/workflows/: ci.yml  nightly-integration.yml
configs/: default.yaml
distortions/presets/: financial_robustness.yaml  minimal_dream.yaml
docs/: plugin_development.md  product-improvement-backlog.md
docs/features/: webhooks.md
docs/research/: benchmark-v1.md  paper-draft.md
frontend/src/app/: layout.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/components/: Footer.tsx
frontend/src/components/dashboard/: AppShell.tsx  AskNightmareDock.tsx  CommandPalette.tsx  DashboardRoot.tsx  Panel.tsx  RunDetail.tsx  SettingsPanel.tsx  Sidebar.tsx  Topbar.tsx  icons.tsx
frontend/src/lib/: api.ts
nightmarenet/: __init__.py  cli.py  pipeline.py  pipeline_runner.py
nightmarenet/api/: app.py  auth.py  badge.py  copilot.py  data_optimize.py  schemas.py  suggest.py
nightmarenet/data/: adaption.py  generator.py  ingest.py  loader.py  scraper.py
nightmarenet/distortions/: adversarial.py  base.py  learned.py  loader.py  nightmare.py  registry.py  semantic.py  testing.py  text.py  validators.py
nightmarenet/distortions/dsl/: __init__.py  executor.py  parser.py  preset_loader.py  schema.py
nightmarenet/distributed/: checkpoint.py  ddp_wrapper.py  resume.py  strategies.py
nightmarenet/evaluation/: certification.py  degradation_curves.py  ensemble_benchmark.py  evaluator.py  format_results.py  metrics.py
nightmarenet/training/: phases.py  scheduler.py  trainer.py
nightmarenet/transfer/: fine_tune.py  head_factory.py  measurement.py  registry.py  report.py
nightmarenet/utils/: config.py  logging_config.py  tracking.py  validation.py  webhooks.py
nightmarenet_server/auth/: api_keys.py  oauth.py
nightmarenet_server/models/: tables.py
nightmarenet_server/realtime/: websocket.py
nightmarenet_server/tasks/: celery_app.py  fallback_worker.py  training.py
scripts/: __init__.py  _verify_e2e.py  demo_pipeline.py  evaluate.py  generate_appendix_e_examples.py  generate_data.py  gpu_check.py  run_benchmark.py  run_gpu_benchmark.py  train.py
tasks/: lessons.md
tests/: conftest.py  test_adaption_full.py  test_api.py  test_callbacks.py  test_certification.py  test_copilot.py  test_distortion_dsl.py  test_distortion_fuzz.py  test_distortion_modules.py  test_distortion_plugins.py  test_distortion_registry.py  test_distortions.py  test_distributed_native.py  test_edge_cases.py  test_edge_cases_extended.py  test_ensemble_benchmark.py  test_generator.py  test_glue.py  test_healthcheck_worker.py  test_ingest.py  test_integration.py  test_metrics.py  test_phases.py  test_pipeline.py  test_pipeline_e2e.py  test_pipeline_lifecycle.py  test_resume.py  test_transfer.py  test_webhooks.py  test_websocket.py
