[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nightmarenet"
version = "0.2.0"
description = "Autonomous AI Self-Improvement Platform — Sleep-Inspired Training Paradigm"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Adit Jain", email = "aditjain@srm.edu.in"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
]
keywords = ["ai", "training", "robustness", "distortion", "machine-learning", "self-improvement"]

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "datasets>=2.14.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]
api = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/Adit-Jain-srm/NightmareNet"
Repository = "https://github.com/Adit-Jain-srm/NightmareNet"
Issues = "https://github.com/Adit-Jain-srm/NightmareNet/issues"

[project.scripts]
nightmarenet-train = "scripts.train:main"
nightmarenet-generate = "scripts.generate_data:main"
nightmarenet-evaluate = "scripts.evaluate:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py39"
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B"]

[tool.setuptools.packages.find]
include = ["nightmarenet*", "scripts"]
