[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nightmarenet"
version = "0.2.0"
description = "Autonomous AI Self-Improvement Platform — Sleep-Inspired Training Paradigm"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "Adit Jain", email = "aditjain@srm.edu.in"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
]
keywords = ["ai", "training", "robustness", "distortion", "machine-learning", "self-improvement"]

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "datasets>=2.14.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
    "mypy>=1.8.0",
    "types-PyYAML>=6.0",
    "hypothesis>=6.100.0",
]
api = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",
    "python-multipart>=0.0.7",
    "slowapi>=0.1.9",
]
tracking = [
    "wandb>=0.16.0",
    "tensorboard>=2.14.0",
]
distributed = [
    "accelerate>=0.25.0",
]
otel = [
    "python-json-logger>=2.0.7",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.24.0",
]
hosted = [
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "authlib>=1.3.0",
    "celery>=5.3.0",
    "redis>=5.0.0",
    "pyjwt>=2.8.0",
    "psycopg[binary]>=3.1.0",
]
adaption = [
    "adaption>=0.1.0",
]
ai = [
    "openai>=1.30.0",
]

[project.urls]
Homepage = "https://github.com/Adit-Jain-srm/NightmareNet"
Repository = "https://github.com/Adit-Jain-srm/NightmareNet"
Issues = "https://github.com/Adit-Jain-srm/NightmareNet/issues"

[project.scripts]
nightmarenet = "nightmarenet.cli:main"
nightmarenet-train = "scripts.train:main"
nightmarenet-generate = "scripts.generate_data:main"
nightmarenet-evaluate = "scripts.evaluate:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short -m 'not slow'"
markers = [
    "slow: marks tests as slow (deselect with '-m not slow')",
]

[tool.ruff]
target-version = "py39"
line-length = 100
exclude = [
    ".windsurf",
    ".claude",
    ".trae",
    ".agent",
    ".codebuddy",
    ".codex",
    ".continue",
    ".cursor",
    ".gemini",
    ".github/prompts",
    ".kiro",
    ".opencode",
    ".qoder",
    ".roo",
    "notebooks",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]
ignore = ["UP007", "UP006", "UP035", "UP045"]

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["torch.*", "transformers.*", "datasets.*", "tqdm.*", "sklearn.*"]
follow_imports = "skip"
follow_imports_for_stubs = false

[tool.setuptools.packages.find]
include = ["nightmarenet*", "scripts"]
